--- a/site-cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/site-cookbooks/nginx/templates/default/nginx.conf.erb
@@ -30,5 +30,5 @@ http {
   # 同じクライアントからの再要求をサーバが待つ時間(秒)
   keepalive_timeout  5;
 
-  include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/conf.d/my-blog.conf;
 }
