--- a/site-cookbooks/php/templates/default/www.conf.erb
+++ b/site-cookbooks/php/templates/default/www.conf.erb
@@ -36,8 +36,11 @@ group = nginx
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /var/run/php-fpm/php-fpm.sock
 ;listen = 127.0.0.1:9000
+listen = /var/run/php-fpm/php-fpm.sock
+listen.owner = nginx
+listen.group = nginx
+listen.mode = 0666
 
 ; Set listen(2) backlog.
 ; Default Value: 65535
